--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "amqplib": "0.4.1",
     "bluebird": "3.3.1",
     "commander": "2.9.0",
+    "mariasql": "0.2.5",
     "node-uuid": "1.4.7",
     "restify": "4.0.4"
   },
@@ -25,6 +26,6 @@
   },
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha --reporter spec --recursive ./test/*",
-    "test-cov": "istanbul cover ./node_modules/mocha/bin/_mocha -- ./test"
+    "coverage": "istanbul cover ./node_modules/mocha/bin/_mocha --recursive  ./test/lib/* -- -u exports -R spec"
   }
 }
