--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bluebird": "3.3.1",
     "commander": "2.9.0",
     "mariasql": "0.2.5",
+    "mongodb": "2.1.7",
     "node-uuid": "1.4.7",
     "restify": "4.0.4"
   },
